# schedule

./: LICENSE  README.md  main.py  project.db  pyproject.toml  setup.cfg
alembic/: env.py
configs/: .env.template
requirements/: dev-requirements.txt  requirements.txt
server/: config.py  routing.py
server/apps/homepage/: app.py  views.py
server/apps/schedule/: api.py  app.py  contracts.py  mapper.py
server/apps/users/: app.py  forms.py  views.py
server/persistence/: __all_models.py
server/persistence/core/: __init__.py  models.py  types.py
server/persistence/schedule/: __init__.py  models.py
server/persistence/users/: models.py
static/: router.js  scheduler.js
static/webcomponents/: package.json
static/webcomponents/framework/: smart.element.js
static/webcomponents/source/: smart.3dchart.js  smart.accordion.js  smart.ajax.js  smart.array.js  smart.barcode.js  smart.bootstrap.js  smart.breadcrumb.js  smart.button.js  smart.buttongroup.js  smart.calendar.js  smart.card.js  smart.cardview.js  smart.carousel.js  smart.chart.annotations.js  smart.chart.api.js  smart.chart.core.js  smart.chart.js  smart.chart.rangeselector.js  smart.chart.waterfall.js  smart.checkbox.js  smart.checkinput.js  smart.chip.js  smart.colorinput.js  smart.colorpanel.js  smart.colorpicker.js  smart.combobox.js  smart.complex.js  smart.core.js  smart.countryinput.js  smart.data.js  smart.date.js  smart.dateformatpanel.js  smart.dateinput.js  (+89 more)
templates/: _formhelpers.html  base.html  nav.html  schedule.html
templates/auth/: base_auth.html  login.html  register.html
(+516 files in other folders)
