[tool.poetry]
name = "schedule"
version = "0.1.0"
description = ""
authors = ["MrEndor <mrendorer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.3"
alembic = "^1.10.3"
flask-sqlalchemy = "^3.0.3"
flask-login = "^0.6.2"
sqlalchemy-serializer = "^1.4.1"
wtforms = "^3.0.1"
flask-wtf = "^1.1.1"
python-dotenv = "^1.0.0"
djhtml = "^3.0.6"
sqlalchemy-utils = "^0.41.0"
flask-restful = "^0.3.9"
flask-pydantic = "^0.11.0"
SQLAlchemy = "^2.0.10"
flask-bootstrap = "^3.3.7.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
